# c_practise

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/game/: actions.h  definitions.h  interpreter.h  types.h  utils.h
src/app/include/ui/: ui.h
src/app/src/: main.c
src/app/src/game/: definitions.c  interpreter.c  utils.c
src/app/src/game/actions/: go.c  inventory.c  look.c  pick.c
src/app/src/ui/: ui.c
src/net/: CMakeLists.txt
src/stdlib/: CMakeLists.txt
src/stdlib/include/: array.h  math.h  strings_utils.h
src/stdlib/src/: array.c  strings.c
